--- a/elements.html
+++ b/elements.html
@@ -17,9 +17,27 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-66818203-6', 'auto');
+
+  /* If the browser_id hasn't already been set... */
+	if (document.cookie.indexOf('browser_uuid_set=1') == -1) {
+	
+	/* Generate a UUID, and assign it to the browser_id custom dimension */
+	ga('set', 'dimension1', uuid.v4());
+	
+	/* Set a cookie so we won't override the UUID we just set */
+	document.cookie = 'browser_uuid_set=1; expires=Fri, 01 Jan 2100 12:00:00 UTC; domain=.arem.us; path=/';
+	}
+
+	/* Assign a timestamp to the utc_millisecs custom dimension */
+	ga('set', 'dimension2', new Date().getTime());
+
+	/* Send a pageview */
   ga('send', 'pageview');
 
 </script>
+
+
+
 	</head>
 	<body class="subpage">
 
